[build-system]
requires = ["setuptools", "wheel>=0.36.2", "setuptools-rust>=1.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logical_rush"
requires-python = ">=3.7"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["tomli>=1.1.0 ; python_version<'3.11'"]
dynamic = [
    "authors",
    "description",
    "license",
    "readme",
    "version"
]

[tool.black]
target_version = ['py310']

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_no_return = true
ignore_missing_imports = true
